SFDC Automation/src/objects/Prospect_Customer__c.object
<CustomObject>
    <description>Related to HQ Visit</description>
    <fields>
        <fullName>Buyer_Behavior__c</fullName>
        <formula>CASE(Prospect_Customer_Participant_Name__r.Buying_Behavior__c, &quot;Believer&quot;, &quot;Believer&quot;, &quot;Fence Sitter&quot;, &quot;Fence Sitter&quot;,&quot;Skeptic&quot;, &quot;Skeptic&quot;,&quot;Denier&quot;, &quot;Denier&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Behavior</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courtesy_Letter__c</fullName>
        <label>Courtesy Letter</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thank you letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Visit_Number__c</fullName>
        <description>Related to HQ Visit</description>
        <label>Executive Visit Number</label>
        <referenceTo>HQ_Visit__c</referenceTo>
        <relationshipName>Prospect_Customer_Participant_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer_Participant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect / Customer Participant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect / Customer</relationshipLabel>
        <relationshipName>Prospect_Customer_Participant_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_in_Meeting__c</fullName>
        <label>Role in Meeting</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Prospect_Customer_Participant_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Prospect / Customer</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Prospect / Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect / Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Buyer_Behavior_must_be_completed</fullName>
        <active>true</active>
        <description>Buyer Behavior must be completed at contact object</description>
        <errorConditionFormula>Buyer_Behavior__c = null</errorConditionFormula>
        <errorMessage>Please complete the Contact &quot;Title&quot; and/or &quot;Buying Behavior&quot; at the Contact Information Level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Title_must_be_completed</fullName>
        <active>true</active>
        <description>Title for Prospect / Customer Participant Info must be completed</description>
        <errorConditionFormula>Title__c = null</errorConditionFormula>
        <errorMessage>Please complete the Contact &quot;Title&quot; and/or &quot;Buying Behavior&quot; at the Contact Information Level</errorMessage>
    </validationRules>
</CustomObject>